# r4.01

./: Cargo.toml
concurrency/: Cargo.toml
network_services/: Cargo.toml
options_and_results/: Cargo.toml
ownership/src/: main.rs
port_scanner/: Cargo.toml
port_scanner/src/: lib.rs
v020_configuration/: Cargo.toml
v020_configuration/src/: configuration.rs  main.rs
v021_app_builder/: Cargo.toml
v021_app_builder/src/: app_builder.rs  main.rs
v030_domain/: Cargo.toml
v030_domain/src/: app_builder.rs  domain.rs  main.rs
v040_memory/: Cargo.toml
v040_memory/src/: app_builder.rs  domain.rs  main.rs
v041_file/: Cargo.toml  machine.json
v041_file/src/: app_builder.rs  configuration.rs  domain.rs  main.rs
v050_use_cases/: Cargo.toml
v050_use_cases/src/: app_builder.rs  main.rs  storage.rs
v060_text_interfaces/: Cargo.toml
v060_text_interfaces/src/: app_builder.rs  configuration.rs  lib.rs  main.rs  use_cases.rs
v070_cli_services/: Cargo.toml
v070_cli_services/src/: app_builder.rs  configuration.rs  lib.rs  main.rs  (+1 more)
v080_html/: Cargo.toml  machine.json
v080_html/src/: app_builder.rs  configuration.rs  main.rs  service.rs
v080_html/src/interfaces/: lexicon.rs
v080_html/src/interfaces/lexicons/: english.rs  french.rs
v080_html/src/interfaces/web_interfaces/: mod.rs  router.rs
v080_html/src/interfaces/web_interfaces/html/: html_formatter.rs  html_handlers.rs  mod.rs
v080_html/src/services/: mod.rs  stdio.rs  tcp.rs  udp.rs  web.rs
v080_html/src/storages/: file.rs  mod.rs
v090_json/: Cargo.toml
voting_machine/: Cargo.toml
(+20 files in other folders)
