[package]
name = "v080_html"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.7"
maud = { version = "0.26", features = ["axum"] }
thiserror = "1.0"